# fmx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/fmx/: __init__.py  chat.py  cli.py  core.py  respond.py  schema.py  store.py
tests/: conftest.py  test_cli.py  test_model_smoke.py  test_schema.py
